# utcore

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py  utcoreConfig.cmake
3rd/boost-bindings/: CMakeLists.txt  Readme.txt  SConscript
3rd/log4cpp/: CMakeLists.txt  README.txt  SConscript
3rd/log4cpp/include/: config.h.in
3rd/log4cpp/src/: AndroidLogAppender.cpp  Category.cpp  FixedContextCategory.cpp  LoggingEvent.cpp  Makefile.in  PatternLayout.cpp  Priority.cpp  PropertyConfigurator.cpp  PropertyConfiguratorImpl.cpp  TimeStamp.cpp
3rd/tinyxml/: CMakeLists.txt  SConscript
config/: boost  (+5 more)
src/: CMakeLists.txt  SConscript  utCore.h
src/utAlgorithm/: 2D3DPoseEstimation.cpp  2D3DPoseEstimation.h  2D3DPoseEstimationHager.cpp  2D3DPoseEstimationHager.h  3DPointReconstruction.cpp  3DPointReconstruction.h  AbsoluteOrientation.cpp  AbsoluteOrientation.h  BundleAdjustment.cpp  BundleAdjustment.h  Correlation.cpp  Correlation.h  FundamentalMatrix.cpp  FundamentalMatrix.h  HandEyeCalibration.cpp  HandEyeCalibration.h  HandEyeCalibrationDual.cpp  HandEyeCalibrationDual.h  HandEyeDataSelection.cpp  HandEyeDataSelection.h  Homography.cpp  Homography.h  LensDistortion.cpp  LensDistortion.h  MultipleCameraPoseOptimization.cpp  MultipleCameraPoseOptimization.h  OnlineRotHec.cpp  OnlineRotHec.h  Projection.cpp  Projection.h  RotationHecKalmanFilter.cpp  RotationHecKalmanFilter.h  TipCalibration.cpp  TipCalibration.h
src/utAlgorithm/AbsoluteOrientation/: AbsoluteOrientation.cpp  AbsoluteOrientation.h  Pose6D.h  Ransac.h  Rotation3D.h  Scale.h
src/utAlgorithm/CameraLens/: Correction.cpp  Correction.h  Distortion.h  Undistortion.h
src/utAlgorithm/Function/: BundleAdjustment.h  CameraIntrinsicsMultiplication.h  Dehomogenization.h  LieRotation.h  MultipleCameraProjection.h  MultipleCameraProjectionError.h  MultipleCameraProjectionErrorART.h  MultiplePointProjection.h  MultiplePointProjectionError.h  ProjectivePoseNormalize.h  QuaternionRotation.h  QuaternionRotationError.h  RadialDistortion.h  RotHecFunction.h  SinglePointMultiProjection.h
src/utAlgorithm/HandEye/: DataSelection.cpp  DataSelection.h  DualQuaternion.cpp  DualQuaternion.h  HandEyeCalibration.cpp  HandEyeCalibration.h
src/utAlgorithm/NewFunction/: CameraIntrinsicsMultiplication.h
src/utAlgorithm/PoseEstimation2D3D/: 2D3DPoseEstimation.cpp  2D3DPoseEstimationHager.cpp  NonPlanarPoseEstimation.cpp  NonPlanarPoseEstimation.h  PlanarPoseEstimation.cpp  (+1 more)
src/utCalibration/: 2D3DPoseEstimation.cpp  2D3DPoseEstimation.h  2D3DPoseEstimationHager.cpp  2D3DPoseEstimationHager.h  3DPointReconstruction.cpp  3DPointReconstruction.h  AbsoluteOrientation.cpp  AbsoluteOrientation.h  BundleAdjustment.cpp  BundleAdjustment.h  Correlation.cpp  Correlation.h  FundamentalMatrix.cpp  FundamentalMatrix.h  HandEyeCalibration.cpp  HandEyeCalibration.h  HandEyeCalibrationDual.cpp  HandEyeCalibrationDual.h  HandEyeDataSelection.cpp  HandEyeDataSelection.h  Homography.cpp  Homography.h  LensDistortion.cpp  LensDistortion.h  MultipleCameraPoseOptimization.cpp  MultipleCameraPoseOptimization.h  Munkres.h  OnlineRotHec.cpp  OnlineRotHec.h  Projection.cpp  Projection.h  RotationHecKalmanFilter.cpp  RotationHecKalmanFilter.h  TipCalibration.cpp  TipCalibration.h
src/utMath/: BackwardPropagation.h  Blas1.h  Blas2.h  Blas3.h  CameraIntrinsics.h  CovarianceTransform.h  DownhillSimplex.h  ErrorPose.cpp  ErrorPose.h  ErrorVector.h  GaussNewton.h  LevenbergMarquardt.h  Matrix.h  MatrixOperations.h  Optimization.h  Pose.cpp  Pose.h  Quaternion.cpp  Quaternion.h  RandomNumbers.h  Ransac.h  RotationVelocity.h  Scalar.h  UnscentedTransform.h  Vector.h  VectorFunctions.h  cast_assign.h  vector_traits.h
src/utMeasurement/: Measurement.h  MeasurementTraits.h  MeasurementTypeTraits.cpp  Timestamp.cpp  Timestamp.h  TimestampSync.cpp  TimestampSync.h  TimestampSyncLS.h
src/utSerialization/: BaseSerializer.cpp  BaseSerializer.h  BoostArchiveSerializer.h  Exception.h  MsgpackSerializer.h  ROSBinarySerialization.cpp  ROSBinarySerialization.h  Serialization.cpp  Serialization.h  SerializationFormat.h  SerializationTraits.h  SerializationTypes.h
src/utTracking/: Average.cpp  Average.h  Kalman.h  LinearPoseMotionModel.h  OutOfOrderPoseKalmanFilter.h  OutOfOrderPoseKalmanfilter.cpp  PoseKalmanFilter.cpp  PoseKalmanFilter.h  RotationOnlyKF.h  RotationOnlyKf.cpp
src/utUtil/: BlockTimer.cpp  BlockTimer.h  CalibFile.h  CleanWindows.h  ETWTracing.cpp  ETWTracing.h  Exception.cpp  Exception.h  Filesystem.cpp  Filesystem.h  GlobFiles.cpp  GlobFiles.h  LTTNGTracingProvider.cpp  LTTNGTracingProvider.h  Logging.cpp  Logging.h  OS.cpp  OS.h  SerialPort.cpp  SerialPort.h  SimpleStringIArchive.h  SimpleStringOArchive.h  StaticAssert.h  TracingProvider.h
tests/: CMakeLists.txt  SConscript  boost_unit_test_framework.cpp  main.cpp  tools.h
tests/Algorithm/: 2D3DPoseEstimationTest.cpp  3DPointReconstructionTest.cpp  AbsoluteOrientationTest.cpp  AlgorithmTest.cpp  BundleAdjustmentTest.cpp  CalibTest.cpp  CalibTest.h  CorrelationTest.cpp  DualHandEyeTest.cpp  FundamentalMatrixTest.cpp  HandEyeDataSelectionTest.cpp  HandEyeTest.cpp  HomographyTest.cpp  ProjectionTest.cpp  TipCalibrationTest.cpp
tests/Calibration/: 2D3DPoseEstimationTest.cpp  3DPointReconstructionTest.cpp  AbsoluteOrientationTest.cpp  BundleAdjustmentTest.cpp  CalibTest.cpp  CalibTest.h  CorrelationTest.cpp  DualHandEyeTest.cpp  FundamentalMatrixTest.cpp  HandEyeDataSelectionTest.cpp  HandEyeTest.cpp  HomographyTest.cpp  ProjectionTest.cpp  TipCalibrationTest.cpp
tests/Geometry/: ConicTest.cpp  GeometryTest.cpp  GeometryTest.h  PointTest.cpp
tests/Math/: Blas1Test.cpp  Blas2Test.cpp  Blas3Test.cpp  ConicTest.cpp  EulerTest.cpp  LapackTest.cpp  MathTest.cpp  MathTest.h  PointTest.cpp  VectorFunctionsTest.cpp
tests/MathUtil/: MathUtilTest.cpp  MathUtilTest.h  RotationCastTest.cpp
tests/Serializer/: BoostArchiveTest.cpp  MsgpackTest.cpp  SerializerTest.cpp  SerializerTest.h
tests/Stochastic/: ExpectationMaximizationTest.cpp  KMeansTest.cpp  StochasticTest.cpp  StochasticTest.h
(+223 files in other folders)
